[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-agent"
version = "0.1.0"
description = "Interactive CLI Agent"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[project.scripts]
agent = "tool_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
